--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html {
-    background-image: url("./images/sharon-mccutcheon-576863-unsplash.jpg");
+    background-image: url("./images/leaf-x-y-1267983-unsplash.jpg");
     background-size: cover;
     font-family: 'helvetica neue';
     text-align: center;
     font-size: 10px;
+    object-fit: cover;
   }
 
   body {
